--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A tool to convert office file to other format.",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine spec/test.js"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/shushanfx/poi-converter-node#readme",
   "dependencies": {
-    "exec": "^0.2.1"
+    "chalk": "^1.1.3",
+    "debug": "^2.6.8"
   }
 }
